# pidgin-hide-chat-on-join

./: .bzrignore  .gitignore  AUTHORS  AUTHORS.md  CHANGES.md  ChangeLog  Makefile.am  Makefile.am.in  Makefile.in  Makefile.mingw  README  README.md  README.win32  aclocal.m4  autogen.sh  build-debian-package.sh  build-win32-package.sh  change_version.sh  config.h.in  config.h.mingw  configure  configure.ac.in  configure.in  configure.in.in  po-update.sh
.github/workflows/: c-cpp.yml
.tx/: config
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: README.Debian  changelog.in  control  copyright.in  rules
po/: Makefile.mingw  POTFILES.in  de.po  es.po  fr.po  pidgin-hide-chat.pot  pt_BR.po  ru.po
scripts/: gen-configure_ac.sh  gen-mingw-config_h.sh  po-update.sh
src/: Makefile.am  Makefile.in  Makefile.mingw  context_menu.c  context_menu.h  conversation_handler.c  conversation_handler.h  hide_chat.c  internal.h  util.c  util.h
